# facts

./: CMakeLists.txt  Dockerfile  Makefile  PACKAGING.md  README.md  checks  facts++.pc.in  facts.pc.in  hello_c.expected  hello_c.expected.junit  hello_cpp.expected  hello_cpp.expected.junit  testfacts.expected  testfacts.expected.junit  tests
.github/workflows/: c-cpp.yml  release.yml  testAction.yml
cmake/: factsConfig.cmake.in
debian/: changelog  control  copyright  libfacts-2.install  libfacts-dev.install  rules
examples/hello/: Makefile  facts.c  facts.h  hello.c
examples/hello_c/: Makefile  README.md  facts.c  facts.h  hello.c
examples/hello_cpp/: Makefile  README.md  facts.c  facts.cpp  facts.h  hello.cpp
expected/: hello_c.out  hello_c_junit.out  hello_c_plain.out  hello_cpp.out  hello_cpp_junit.out  hello_cpp_plain.out  testfacts.out  testfacts_c.out  testfacts_c_junit.out  testfacts_c_plain.out  testfacts_cpp.out  testfacts_cpp_junit.out  testfacts_cpp_plain.out  testfacts_if_facts_c.out  testfacts_if_facts_cpp.out  testfacts_junit.out
include/: factcheck.h  facts.h
packaging/alpine/: APKBUILD
packaging/choco/: facts.nuspec
packaging/choco/tools/: install.ps1
packaging/homebrew/: facts.rb
src/: factcheck.c  factcheck.cpp  factcheck_check.c  factcheck_factcheck.c  facts.c  facts.cpp  sample_check.c  sample_check.cpp  sample_factcheck.cpp  testfacts.c  testfacts.cpp  testfacts_if.c  testfacts_if.cpp
test/: sample_facts.c  testfacts.c  testfacts.cpp  testfacts_if.c  testfacts_if.cpp
vscode-facts/: README.md  package.json
vscode-facts/src/: discovery.ts  extension.ts  runner.ts  testProvider.ts  util.ts
